<resources>
    <string name="app_name">ML Android Lab</string>
    <string name="ml_kit">ML Kit</string>
    <string name="tensorflowlite">TensorFlow Lite</string>
    <string name="mediapipe">MediaPipe</string>
    <string name="generativeai">Generative AI</string>
    <string name="firebase_ml">Firebase Machine Learning</string>
    <string name="asclepius">Asclepius</string>
    <string name="text_recognition">Text Recognition</string>
    <string name="barcode_scanning">Barcode Scanning</string>
    <string name="image_classification">Image Classification</string>
    <string name="prediction">Prediction</string>
    <string name="audio_classification">Audio Classification</string>
    <string name="sentiment_analysis">Sentiment Analysis</string>
    <string name="custom_model_deployment">Custom Model Deployment</string>
    <string name="smart_reply">Smart Reply</string>
    <string name="bert">BERT</string>
    <string name="edit">Edit</string>
    <string name="select_an_image">Select an image from Gallery or Camera, then click the Translate button to process. \n\nNote: Currently supported languages are only English to Indonesian.</string>
    <string name="gallery">Gallery</string>
    <string name="analyze">Analyze</string>
    <string name="translate">Translate</string>
    <string name="camera">Camera</string>
    <string name="permission_request_granted">Permission request granted</string>
    <string name="permission_request_denied">Permission request denied</string>
    <string name="no_photos_were_captured">No photos were captured</string>
    <string name="no_media_selected">No Media Selected</string>
    <string name="no_text_recognized">No Text Recognized!</string>
    <string name="empty_image_warning">Please insert the image file first</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum condimentum fringilla condimentum. Praesent nec ante elementum, interdum justo non, gravida augue. Vivamus tincidunt ante ac lorem convallis, vel gravida nibh lobortis. Integer sit amet nibh consectetur, faucibus metus et, accumsan purus. Etiam semper urna a vehicula tempus. Phasellus pharetra tincidunt quam at gravida. Praesent volutpat placerat imperdiet. Vivamus ultricies blandit sem a venenatis.</string>
    <string name="english">English</string>
    <string name="indonesian">Indonesian</string>
    <string name="text_recognition_result" />
    <string name="result">Result</string>
    <string name="downloading_model_fail">Model failed to download</string>
    <string name="please_select_an_image_first">Please select an image first!</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="text_copied_to_clipboard">Text copied to clipboard</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="cancer_detection">Cancer Detection</string>
    <string name="select_an_image_from_gallery">Select an image from Gallery to process the skin check.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="history">History</string>
    <string name="confidence">Confidence: %</string>
    <string name="tflitevision_is_not_initialized_yet">TfLiteVision is not initialized yet</string>

    <string name="rice_stock_predictor">Rice Stock Predictor</string>
    <string name="sales_this_month">Fill in this months sales (in kg)</string>
    <string name="predict">Next Month Stock Forecast</string>
    <string name="tflite_is_not_initialized_yet">TfLite is not initialized yet</string>
    <string name="no_tflite_interpreter_loaded">No TFLite interpreter loaded</string>
    <string name="prediction_error">Prediction Error</string>
    <string name="model_loading_error">Error to load model</string>

    <string name="btn_start">Start</string>
    <string name="btn_stop">Stop</string>
    <string name="audio_classifier_failed">Audio Classifier failed to initialize. See error logs for details</string>
    <string name="audio_result">"Result: "</string>
    <string name="classify">Classify</string>
    <string name="text_classifier_failed">Text classifier failed to initialize. See error logs for details.</string>
    <string name="classification_failed">Classification Failed</string>
    <string name="error_empty_input">Please enter a word first</string>
    <string name="no_classification_results">No Classification Result</string>

</resources>