<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:liftOnScroll="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                app:title="@string/app_name"
                app:titleCentered="true"
                app:titleTextAppearance="@style/TextAppearance.Material3.TitleLarge"
                app:titleTextColor="@color/md_theme_onPrimaryContainer" />
        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/tv_title_mlkit"
            style="@style/Theme.MLAndroidLab.Headline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/ml_kit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout" />

        <ImageView
            android:id="@+id/icon_mlkit"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_title_mlkit"
            app:layout_constraintStart_toEndOf="@id/tv_title_mlkit"
            app:layout_constraintTop_toTopOf="@id/tv_title_mlkit"
            app:srcCompat="@drawable/ml_kit"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:id="@+id/layout_mlkit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/tv_title_mlkit"
            app:layout_constraintTop_toBottomOf="@id/tv_title_mlkit">

            <include
                android:id="@+id/to_mlkit"
                layout="@layout/layout_ml_kit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_title_tensorflowlite"
            style="@style/Theme.MLAndroidLab.Headline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/tensorflowlite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_mlkit" />

        <ImageView
            android:id="@+id/icon_tensorflowlite"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_title_tensorflowlite"
            app:layout_constraintStart_toEndOf="@id/tv_title_tensorflowlite"
            app:layout_constraintTop_toTopOf="@id/tv_title_tensorflowlite"
            app:srcCompat="@drawable/tensorflowlogo"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:id="@+id/layout_tensorflow_lite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/tv_title_tensorflowlite"
            app:layout_constraintTop_toBottomOf="@id/tv_title_tensorflowlite">

            <include
                layout="@layout/layout_tensorflow_lite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <TextView
            android:id="@+id/tv_title_mediapipe"
            style="@style/Theme.MLAndroidLab.Headline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/mediapipe"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_tensorflow_lite" />

        <ImageView
            android:id="@+id/icon_mediapipe"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_title_mediapipe"
            app:layout_constraintStart_toEndOf="@id/tv_title_mediapipe"
            app:layout_constraintTop_toTopOf="@id/tv_title_mediapipe"
            app:srcCompat="@drawable/mediapipe"
            tools:ignore="ContentDescription" />

        <!-- Include horizontal scroll view layout -->
        <include
            android:id="@+id/layout_mediapipe"
            layout="@layout/layout_mediapipe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_mediapipe" />

        <TextView
            android:id="@+id/tv_title_firebase"
            style="@style/Theme.MLAndroidLab.Headline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/firebase_ml"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_mediapipe" />

        <ImageView
            android:id="@+id/icon_firebaseml"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_title_firebase"
            app:layout_constraintStart_toEndOf="@id/tv_title_firebase"
            app:layout_constraintTop_toTopOf="@id/tv_title_firebase"
            app:srcCompat="@drawable/firebaselogo"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:id="@+id/layout_firebase_ml"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/tv_title_firebase"
            app:layout_constraintTop_toBottomOf="@id/tv_title_firebase">

            <include
                layout="@layout/layout_firebase_ml"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_title_generativeai"
            style="@style/Theme.MLAndroidLab.Headline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/generativeai"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_firebase_ml" />

        <ImageView
            android:id="@+id/icon_generativeai"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_title_generativeai"
            app:layout_constraintStart_toEndOf="@id/tv_title_generativeai"
            app:layout_constraintTop_toTopOf="@id/tv_title_generativeai"
            app:srcCompat="@drawable/generative_ai"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:id="@+id/layout_generative_ai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/tv_title_generativeai"
            app:layout_constraintTop_toBottomOf="@id/tv_title_generativeai">

            <include
                layout="@layout/layout_generative_ai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_title_asclepius1"
            style="@style/Theme.MLAndroidLab.Headline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/asclepius"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_generative_ai" />

        <LinearLayout
            android:id="@+id/layout_asclepius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:paddingBottom="32dp"
            app:layout_constraintStart_toStartOf="@+id/tv_title_asclepius1"
            app:layout_constraintTop_toBottomOf="@id/tv_title_asclepius1">

            <include
                layout="@layout/layout_asclepius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>